# gomonty

./: Cargo.toml  Makefile  README.md  RELEASING.md  bench_test.go  dispatch.go  doc.go  errors.go  example_test.go  fuzz_test.go  go.mod  runner.go  runner_print_test.go  test_helpers_test.go  types.go  types_test.go  wire.go
.agents/skills/upstream-refresh/: SKILL.md
.github/workflows/: release-prep.yml  release.yml  verify.yml
crates/monty-go-ffi/: Cargo.toml  cbindgen.toml
crates/monty-go-ffi/src/: lib.rs  wire.rs
examples/: go.mod  go.sum
examples/cmd/example/: main.go
go/: README.md
internal/ffi/: checksums.txt  ffi.go  ffi_darwin_arm64.go  ffi_linux_gnu.go  ffi_linux_musl.go  ffi_windows_amd64.go  lib_darwin_arm64.go  lib_linux_amd64.go  lib_linux_amd64_musl.go  lib_linux_arm64.go  lib_linux_arm64_musl.go  lib_windows_amd64.go  load_library_unix.go  load_library_windows.go  loader_test.go  stub.go
internal/ffi/include/: monty_go_ffi.h
internal/ffi/lib/: README.md
scripts/: build-go-ffi.sh  compare-benchmarks.py  profile-benchmarks.sh
testdata/fuzz/FuzzLoadRunner/: 9d6d51c0f8e81015
vfs/: doc.go  example_test.go  vfs.go  vfs_test.go
